# nrf52833-dk-eval

./: .gitignore  CMakeLists.txt  nrf52833-ble-test.emProject  nrf52833-dk-eval.emProject
Inc/: cppmain.h  gpio.h
Inc/Config/: sdk_config.h
Inc/Peripherals/: gpio.h  gpio_input.h  gpio_output.h  i2c.h  i2c_driver.h  i2c_manager.h  spi.h  spi_driver.h  spi_manager.h
Src/: cppmain.cpp  gpio.cpp  main.c
Src/Peripherals/: gpio.cpp  gpio_input.cpp  gpio_output.cpp  i2c_driver.cpp  spi_driver.cpp  spi_manager.cpp
